--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset='utf-8' />
     <title></title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-    <!-- <script type="text/javascript" src="lib/js/jquery-1.12.4.js"></script> -->
-    <!-- <script type="text/javascript" src="lib/js/osmtogeojson.js"></script> -->
-    <script src='lib/js/mapbox-gl.js'></script>
-    <link href='lib/css/mapbox-gl.css' rel='stylesheet' />
-    <link href='lib/css/bootstrap.min.css' rel='stylesheet' />
+    <link href='lib/mapbox/mapbox-gl.css' rel='stylesheet' />
+    <link href='lib/bootstrap_4/css/bootstrap.css' rel='stylesheet' />
+
+    <script src='lib/jquery/jquery-3.2.1.js'></script>
+
     <style>
     body {
         margin: 0;
@@ -18,34 +18,54 @@
 
     #map {
         width: 100%;
-        height: 70vh
+        height: 95vh;
     }
     </style>
 </head>
 
 <body>
-    <div id='map'></div>
-    <div id="example">
-        We are using node
-        <script>
-        document.write(process.versions.node)
-        </script>, Chrome
-        <script>
-        document.write(process.versions.chrome)
-        </script>, and Electron
-        <script>
-        document.write(process.versions.electron)
-        </script>.
-        <div id="left">
-            <h3>OSM data</h3>
-            <textarea id="osmxml" contenteditable="true"></textarea>
-        </div>
-        <div id="right">
-            <h3>GeoJSON</h3>
-            <textarea id="geojson" contenteditable="true"></textarea>
-        </div>
-        <a class="button" href="" id="toGeo">convert to GeoJSON &rarr;</a>
+     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+      <a class="navbar-brand" href="#">Fixed navbar</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#">Disabled</a>
+          </li>
+        </ul>
+        <form class="form-inline mt-2 mt-md-0">
+          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </div>
+    </nav>
+
+    <div class="container">
+      <div id="map">
+      </div>
+      <div class="jumbotron">
+        <h1>Navbar example</h1>
+        <p class="lead">This example is a quick exercise to illustrate how fixed to top navbar works. As you scroll, it will remain fixed to the top of your browser's viewport.</p>
+        <a class="btn btn-lg btn-primary" href="../../components/navbar/" role="button">View navbar docs &raquo;</a>
+      </div>
     </div>
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="lib/jquery/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+    <script src="lib/jquery/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+    <script src='lib/popperjs/popper.min.js'></script>
+    <script src='lib/bootstrap_4/js/bootstrap.js'></script>
+    <script src='lib/mapbox/mapbox-gl.js'></script>
     <script src='appjs/mapper.js'></script>
 </body>
 
