--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,6 @@
     <title></title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
     <link href='lib/bootstrap_4/css/bootstrap.css' rel='stylesheet' />
-    <script src='lib/jquery/jquery-3.2.1.js'></script>
     <style>
     body {
         margin: 0;
@@ -59,11 +58,12 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="lib/jquery/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-    <script src="lib/jquery/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-    <script src='lib/popperjs/popper.min.js'></script>
-    <script src='lib/bootstrap_4/js/bootstrap.js'></script>
     <script src='appjs/mapper.js'></script>
+    <script src="../node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="../node_modules/jquery/dist/jquery.slim.min.js"></script>
+    <script src="../node_modules/tether/dist/js/tether.min.js"></script>
+    <script src='../node_modules/popper.js/dist/umd/popper.min.js'></script>
+    <script src='../node_modules/bootstrap/dist/js/bootstrap.min.js'></script>
     <style lang = 'scss'>
         @import '../node_modules/mapbox-gl/dist/mapbox-gl.css';
         @import '../node_modules/%40mapbox/mapbox-gl-draw/dist/mapbox-gl-draw.css';
