--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta charset='utf-8' />
     <title></title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-    <link href='lib/bootstrap_4/css/bootstrap.css' rel='stylesheet' />
+    <link href='../node_modules/bootstrap/dist/css/bootstrap.min.css' rel='stylesheet' />
     <style>
     body {
         margin: 0;
