--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
         top: 10vh;
         width: 100%;
         height: 90vh;
+        margin-bottom: 4.4rem;
     }
     </style>
 </head>
@@ -50,8 +51,9 @@
         <div class="jumbotron">
             <h1>Map Example</h1>
             <p class="lead">
-                Whit Terry Mapper you can use OSM files as "offline" geojson source for your maps. Here an example of it. With the button below, you can also export the map as an image.
+                Whit Terry Mapper you can use OSM files as "offline" geojson source for your maps. Here an example of it. With the button below, you can also export the map as an image... Sorry it's not true anymore, I broke the functionality.. XD
             </p>
+            <p>Please wait for the next versions</p>
             <a id="export" class="btn btn-lg btn-primary" role="button" onclick="toImage()">Export map to PNG</a>
         </div>
     </div>
