--- a/src/index.html
+++ b/src/index.html
@@ -57,6 +57,54 @@
             <a id="export" class="btn btn-lg btn-primary" role="button" onclick="toImage()">Export map to PNG</a>
         </div>
     </div>
+    <div class="container">
+        <h2>Print to PDF Settings</h2>
+        <div>
+            <p style="display:inline-block;width:100px;margin-right:10px;">Layout</p>
+            <select id="layout-settings">
+                <option selected="">Portrait</option>
+                <option>Landscape</option>
+            </select>
+        </div>
+        <div>
+            <p style="display:inline-block;width:100px;margin-right:10px;">Page size</p>
+            <select id="page-size-settings">
+                <option>A4</option>
+                <option>A3</option>
+                <option>Letter</option>
+                <option>Legal</option>
+                <option>Tabloid</option>
+            </select>
+        </div>
+        <div>
+            <p style="display:inline-block;width:100px;margin-right:10px;">Margins</p>
+            <select id="margin-settings">
+                <option value="0" selected="">Default</option>
+                <option value="1">None</option>
+                <option value="2">Minimum</option>
+            </select>
+        </div>
+        <div>
+            <div>
+                <p style="display:inline-block;width:100px;margin-right:10px;">Margins</p>
+                <div style="display:inline-block">
+                    <input id="print-background" type="checkbox">
+                    <span i18n-content="optionBackgroundColorsAndImages">Background graphics</span>
+                </div>
+                <div style="padding-left:115px">
+                    <input id="print-selection" type="checkbox">
+                    <span i18n-content="optionBackgroundColorsAndImages">Selection only</span>
+                </div>
+            </div>
+            <div style="margin-top:15px">
+                <button id="print_button">Print</button>
+                <button id="save_pdf_button">Save as PDF</button>
+                <button id="view_pdf_button">View PDF</button>
+            </div>
+            <div id="output-log">
+            </div>
+        </div>
+    </div>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
@@ -66,9 +114,9 @@
     <script src="../node_modules/tether/dist/js/tether.min.js"></script>
     <script src='../node_modules/popper.js/dist/umd/popper.min.js'></script>
     <script src='../node_modules/bootstrap/dist/js/bootstrap.min.js'></script>
-    <style lang = 'scss'>
-        @import '../node_modules/mapbox-gl/dist/mapbox-gl.css';
-        @import '../node_modules/%40mapbox/mapbox-gl-draw/dist/mapbox-gl-draw.css';
+    <style lang='scss'>
+    @import '../node_modules/mapbox-gl/dist/mapbox-gl.css';
+    @import '../node_modules/%40mapbox/mapbox-gl-draw/dist/mapbox-gl-draw.css';
     </style>
 </body>
 
